style: replace get(0) with getFirst() per AGENTS conventions
Java 21 SequencedCollection.getFirst() is preferred over get(0).
Applied across TransformTaskSupport, Aggregate, and
DefaultExpressionEngine.